syntax = "proto3";

package axion.infrastructure;

import "common/common.proto";

// Cluster messages
message CreateClusterRequest {
  axion.common.RequestMetadata metadata = 1;
  string name = 2;
  string description = 3;
}

message GetClusterRequest {
  axion.common.RequestMetadata metadata = 1;
  string cluster_id = 2;
}

message UpdateClusterRequest {
  axion.common.RequestMetadata metadata = 1;
  string cluster_id = 2;
  optional string name = 3;
  optional string description = 4;
}

message DeleteClusterRequest {
  axion.common.RequestMetadata metadata = 1;
  string cluster_id = 2;
}

message ListClustersRequest {
  axion.common.RequestMetadata metadata = 1;
  axion.common.Pagination pagination = 2;
}

message Cluster {
  string id = 1;
  string user_id = 2;
  string name = 3;
  string description = 4;
  int32 servers_count = 5;
  int64 created_at = 6;
  int64 updated_at = 7;
}

message ClusterResponse {
  axion.common.Status status = 1;
  oneof result {
    axion.common.Error error = 2;
    Cluster cluster = 3;
  }
}

message ListClustersResponse {
  axion.common.Status status = 1;
  oneof result {
    axion.common.Error error = 2;
    ListClustersData data = 3;
  }
}

message ListClustersData {
  repeated Cluster clusters = 1;
  axion.common.Pagination pagination = 2;
}

message ListClusterServersRequest {
  axion.common.RequestMetadata metadata = 1;
  string cluster_id = 2;
  axion.common.Pagination pagination = 3;
}
